<resources>
    <string name="app_name">mem_app</string>
    <string name="logout">logout</string>
    <string name="category">Category</string>
    <string name="myInfo">MyInfo</string>
    <string name="allItems">All Items</string>
    <string name="timeline">Timeline</string>
    <string name="menu"> <u>Menu</u></string>

    <string name="items">Items</string>
    <string name="button">Button</string>
    <string name="home">home</string>
    <string name="Search">Search</string>

    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="username">Username*</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">E-mail*</string>
    <string name="date_format">(DD/MM/YY)</string>
    <string name="go_back">Go Back</string>
    <string name="password_required">Password*</string>

    <string name="category2">category2</string>
    <string name="category1">Category1</string>
    <string name="category3">category3</string>
    <string name="category4">category4</string>
    <string name="category5">category5</string>
    <string name="category6">category6</string>
    <string name="category7">category7</string>
    <string name="previous">previous</string>
    <string name="itemid">itemID</string>
    <string name="itemname">ItemName</string>
    <string name="Itemid">Itemid</string>
    <string name="description">Description</string>
    <string name="create_new">Create New</string>
    <string name="add_item">add item</string>
    <string name="fillItemName">Item Name*</string>
    <string name="item_name">Item_name</string>
    <string name="event_name">event_name</string>
    <string name="Main">Main</string>
    <string name="edit_event_image">Edit Event Image</string>
    <string name="edit">Edit</string>
    <string name="upload_event_image">Upload Event Image</string>
</resources>
