<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/addItemButton"
        style="@style/Base.TextAppearance.AppCompat.Menu"
        android:layout_width="371dp"
        android:layout_height="128dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="#AED581"
        android:onClick="onAddItemButtonClick"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textColor="#F9F9F9"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/allItemBotton"
        style="@style/Base.TextAppearance.AppCompat.Menu"
        android:layout_width="371dp"
        android:layout_height="128dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="#D850BBF1"
        android:onClick="onViewAllItemsButtonClick"
        android:text="@string/allItems"
        android:textColor="#F9F9F9"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton" />

    <Button
        android:id="@+id/myInfoButton"
        style="@style/Base.TextAppearance.AppCompat.Menu"
        android:layout_width="371dp"
        android:layout_height="137dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="#FACF48"
        android:onClick="onUserInformationButtonClick"
        android:text="@string/myInfo"
        android:textColor="#F9F9F9"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allItemBotton" />

    <Button
        android:id="@+id/main_button_logout"
        style="@style/Base.TextAppearance.AppCompat.Menu"
        android:layout_width="376dp"
        android:layout_height="74dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:background="#FF6565"
        android:onClick="onLogoutButtonClick"
        android:text="@string/logout"
        android:textColor="#F4F4F4"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myInfoButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="217dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>